--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonschema": "^1.4.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3"
+  },
+  "devDependencies": {
+    "supertest": "^6.2.4"
   }
 }
