--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "description": "API for Pliant Technologies Product Registration",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -e html,css,js,json server.js"
+    "test": "jest -i",
+    "start": "node server.js",
+    "dev": "nodemon -e html,css,js,json server.js"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "config.js"
+    ]
   },
   "author": "Matt Baltzell",
   "license": "ISC",
@@ -20,6 +27,7 @@
     "pg": "^8.7.3"
   },
   "devDependencies": {
+    "jest": "^28.1.3",
     "supertest": "^6.2.4"
   }
 }
